SET(TARGET_NAME "proland")
SET(TARGET_DIR "./")

# INCLUDE_DIRECTORIES(../../sgtLuna/include)
INCLUDE_DIRECTORIES(../../ork/libraries)
INCLUDE_DIRECTORIES(../../ork)

INCLUDE_DIRECTORIES(${PTHREADS_INC_DIR})
LINK_DIRECTORIES(${PTHREADS_LIB_DIR})

INCLUDE_DIRECTORIES(${GLEW_INC_DIR})
LINK_DIRECTORIES(${GLEW_LIB_DIR})

INCLUDE_DIRECTORIES(${GLUT_INC_DIR})
LINK_DIRECTORIES(${GLUT_LIB_DIR})

INCLUDE_DIRECTORIES(${ATB_INC_DIR})
LINK_DIRECTORIES(${ATB_LIB_DIR})

INCLUDE_DIRECTORIES(${TIFF_INC_DIR})
LINK_DIRECTORIES(${TIFF_LIB_DIR})

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(core)
INCLUDE_DIRECTORIES(terrain)
INCLUDE_DIRECTORIES(atmo)
INCLUDE_DIRECTORIES(ocean)

ADD_DEFINITIONS(-DPROLAND_LIBRARY)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_DEFINITIONS("-DORK_API=__declspec(dllimport)")
# ADD_DEFINITIONS("-DPROLAND_API=__declspec(dllexport)")

FILE(GLOB_RECURSE PUBLIC_HEADERS "core/*.h" "terrain/*.h" "atmo/*.h" "ocean/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "core/*.cpp" "terrain/*.cpp" "atmo/*.cpp" "ocean/*.cpp")

ADD_MSVC_PRECOMPILED_HEADER("proland_common.h" "proland_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ork ${PTHREADS_LIBS} ${ATB_LIBS} ${TIFF_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
