SET(TARGET_NAME "sgtCore")
SET(TARGET_DIR "./")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES(../../sgtLuna/include)
INCLUDE_DIRECTORIES(../../ModuleLoader/include)

ADD_DEFINITIONS(-DCXX_ENABLED)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DSGTCORE_LIBRARY)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("kernel.h" "kernel.cpp" SOURCE_FILES)

GENERATE_LUA_PACKAGE(SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} "kernel.def")

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna ModuleLoader)

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
