SET(TARGET_NAME "sgt")
SET(TARGET_DIR "./")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../ModuleLoader/include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DLAUNCHER_VERSION="${PROJECT_VERSION}")

# Build this app as a windows app or not:
SET(WINDOWS_APP TRUE)
SET(CORE_SUPPORT FALSE)
SET(LUNAGEN_SUPPORT FALSE)

IF(WINDOWS_APP)
ADD_DEFINITIONS(-DWINDOWS_APP)
ENDIF()

IF(CORE_SUPPORT)
ADD_DEFINITIONS(-DWITH_CORE_SUPPORT)
ENDIF()

IF(LUNAGEN_SUPPORT)
ADD_DEFINITIONS(-DWITH_LUNAGEN_SUPPORT)
ENDIF()

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("launcher.h" "launcher.cpp" SOURCE_FILES)

ADD_CUSTOM_TARGET(${TARGET_NAME}_images)

IF(CORE_SUPPORT)
# core dependencies:
GENERATE_LIBRARY_IMAGE(ModuleLoader moduleloader_dll SOURCE_FILES)
GENERATE_LIBRARY_IMAGE(sgtLuna sgtluna_dll SOURCE_FILES)
GENERATE_LIBRARY_IMAGE(sgtCore sgtcore_dll SOURCE_FILES)
GENERATE_LIBRARY_IMAGE(plug_core plug_core_sgp SOURCE_FILES)
GENERATE_LIBRARY_IMAGE(plug_lfs plug_lfs_sgp SOURCE_FILES)
GENERATE_LIBRARY_IMAGE(core_pack lua_core_pak SOURCE_FILES)

GENERATE_EXT_LIBRARY_IMAGE(deps/lua51.dll lua51_dll SOURCE_FILES)
GENERATE_EXT_LIBRARY_IMAGE(deps/osg97-osg.dll osg97_osg_dll SOURCE_FILES)
GENERATE_EXT_LIBRARY_IMAGE(deps/osg97-osgDB.dll osg97_osgdb_dll SOURCE_FILES)
GENERATE_EXT_LIBRARY_IMAGE(deps/osg97-osgUtil.dll osg97_osgutil_dll SOURCE_FILES)
GENERATE_EXT_LIBRARY_IMAGE(deps/ot12-OpenThreads.dll ot12_openthreads_dll SOURCE_FILES)
ENDIF()

IF(LUNAGEN_SUPPORT)
GENERATE_LIBRARY_IMAGE(plug_doxmlparser plug_doxmlparser_sgp SOURCE_FILES)
GENERATE_LIBRARY_IMAGE(plug_lpeg plug_lpeg_sgp SOURCE_FILES)
ENDIF()

IF(WINDOWS_APP)
ADD_EXECUTABLE (${TARGET_NAME} WIN32 ${PUBLIC_HEADERS} ${SOURCE_FILES} launcher.rc "../../ModuleLoader/src/MemoryModule.c")
ELSE()
ADD_EXECUTABLE (${TARGET_NAME} ${PUBLIC_HEADERS} ${SOURCE_FILES} launcher.rc "../../ModuleLoader/src/MemoryModule.c")
ENDIF()

IF(NOT CORE_SUPPORT)
	TARGET_LINK_LIBRARIES(${TARGET_NAME} ModuleLoader sgtCore)
ENDIF()

ADD_DEPENDENCIES(${TARGET_NAME} ${TARGET_NAME}_images)

# SimKernel must be constructed to build this executable.
# ADD_DEPENDENCIES(${TARGET_NAME} SimKernel)

COMPRESS_BINARY()

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})
	
