SET(TARGET_NAME "sgtLuna")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../include/lanes)

ADD_DEFINITIONS(-DSGTLUNA_LIB)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("lunaCommon.h" "lunaCommon.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} lanes/lanes.c lanes/threading.c lanes/tools.c lanes/keeper.c)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${OSG_LIBS} ${LUA_LIBS})

# INSTALL_PDB()

# INSTALL(TARGETS ${TARGET_NAME}
# 	RUNTIME DESTINATION bin/${FLAVOR}
# 	LIBRARY DESTINATION bin/${FLAVOR}
# 	ARCHIVE DESTINATION ../sources/sgtLuna/lib)

# GENERATE_LUA_PACKAGE(${TARGET_NAME})	
	
# COMPRESS_BINARY()
	