SET(TARGET_NAME "sgtLuna")
SET(TARGET_DIR "./")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../include/lanes)

ADD_DEFINITIONS(-DSGTLUNA_LIB)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("lunaCommon.h" "lunaCommon.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} lanes/lanes.c lanes/threading.c lanes/tools.c lanes/keeper.c)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${OSG_LIBS} ${LUA_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
