SET(TARGET_NAME "proland-glut-example")
SET(TARGET_DIR "./")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

add_definitions(${GLUT_FLAGS})

ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${GLUT_LIBS}) #${ATB_LIBS} #${PTHREADS_LIBS}

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()

